Fixed some more spacing issues between sections and will soon need to look into sapcing within sections

--- a/src/index.css
+++ b/src/index.css
@@ -97,11 +97,13 @@ code {
 }
 
 .container > div:first-child {
-  padding: 0;
+  padding: 3rem 0;
+  margin: 0 auto;
+  /* padding-to 3rem; */
 }
 
-.container .space-below {
-  margin-top: 17rem;
+.container > div:first-child > div:first-child {
+  /* transform: translateY(0); */
 }
 
 /* ----------------- Grid ----------------- */
@@ -110,12 +112,12 @@ code {
   display: grid;
   /* border: 1px solid green; */
   padding: 2rem 0;
+  margin: 2rem 0;
 }
 
 .column-two-even {
   grid-template-columns: repeat(2, 1fr);
 }
-
 
 .column-one > div:first-child,
 .column-two-even > div:first-child, 
@@ -128,11 +130,12 @@ code {
 {
   position: absolute;
   width: 100%;
-  height: 20rem;
-  background-color: black;
+  height: 25rem;
+  background-color: pink;
   left: 0;
-  opacity: .5;
+  /* opacity: .5; */
   z-index: -4;
+  transform: translateY(-3rem);
 }
 
 .background-color-one {
